# ocr-server

./: .gitignore  README.md  pyproject.toml
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_initial.py  0003_board_ocr_result.py
config/: settings.py  urls.py
ocr/: urls.py  views.py
static/script/: board-api.js  boards-api.js
static/style/: form.css  grid.css  list.css
templates/: board.html  footer.html  header.html  join_form.html
users/: admin.py  models.py  urls.py
users/migrations/: 0001_initial.py
